--- a/config/style.css
+++ b/config/style.css
@@ -1,6 +1,9 @@
 body {
     max-width: 700;
-    font-size: 18;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+    font-size: 14px;
+    line-height: 1.5;
+    color: #24292e;
 }
 
 table.navigate {
@@ -10,4 +13,5 @@ table.navigate {
 table.posts {
     width: 100%;
     text-align: left;
+	font-size: 14px;
 }
