--- a/config/style.css
+++ b/config/style.css
@@ -1,17 +1,22 @@
 body {
+    /* Limiting the width, the chosen font, the line height, and the color,
+       are all based off of what github.com does when displaying markdown. */
     max-width: 700;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-    font-size: 14px;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
+                 Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+                 "Segoe UI Symbol";
+    font-size: 18pt;
     line-height: 1.5;
     color: #24292e;
 }
 
 table.navigate {
     width: 100%;
+    font-size: 16pt;
 }
 
 table.posts {
     width: 100%;
     text-align: left;
-	font-size: 14px;
+	font-size: 18pt;
 }
