--- a/config/portrait.css
+++ b/config/portrait.css
@@ -20,13 +20,8 @@ code {
     background: #F0F0F0
 }
 
-p, table.navigate, table.posts, ul, ol {
+p, .navigation-bar, table.posts, ul, ol {
     width: 100%;
-}
-
-table.navigate {
-    width: 100%;
-    font-size: 14pt;
 }
 
 table.posts {
@@ -55,3 +50,12 @@ table.series {
 table.series > tbody > tr {
     text-align: center;
 }
+
+.navigation-bar {
+    width: 100%;
+    font-size: 14pt;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+  }
