--- a/config/portrait.css
+++ b/config/portrait.css
@@ -42,13 +42,28 @@ img.thumbnail {
     width: 700px;
 }
 
-table.series {
+.series-navigation {
     width: 100%;
+    font-size: 12pt;
+    text-align: center;
     margin-bottom: 20px;
 }
 
-table.series > tbody > tr {
-    text-align: center;
+.series-navigation-header {
+    font-weight: bold;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.series-navigation-links {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-around;
+    flex-wrap: wrap;
 }
 
 .navigation-bar {
