--- a/config/common.css
+++ b/config/common.css
@@ -1,10 +1,5 @@
 body {
-    /* Limiting the width (see p below), the chosen font, the line height, and
-       the color, are all based off of what github.com does when displaying
-       markdown. */
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,
-                 Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
-                 "Segoe UI Symbol";
+	font-family: 'Akzidenz-Grotesk BQ Light';
     font-size: 16pt;
     line-height: 1.5;
     color: #24292e;
@@ -13,16 +8,11 @@ body {
 /* Code snippets are only as wide as their content. */
 pre {
     display: table;
-    min-width: 700;
 }
 
 /* Make the background of code look different from surrounding text. */
 code {
     background: #F0F0F0
-}
-
-p, .navigation-bar, table.posts, ul, ol {
-    max-width: 700;
 }
 
 table.posts {
@@ -39,14 +29,9 @@ div.table-of-contents {
     font-size: 14pt;
 }
 
-img.thumbnail {
-    width: 700px;
-}
-
 .series-navigation {
     width: 100%;
     font-size: 12pt;
-    max-width: 700px;
     text-align: center;
     margin-bottom: 20px;
 }
