--- a/config/common.css
+++ b/config/common.css
@@ -71,3 +71,10 @@ img.preview {
     width: 100%;
     height: auto
 }
+
+/* Headers (<h1>, <h2>, etc.) are links to themselves.  Make sure they don't
+look like links.  The linkiness is a hidden feature.  */
+a.section-self-link {
+    text-decoration: inherit;
+    color: inherit;
+}
