--- a/config/common.css
+++ b/config/common.css
@@ -86,7 +86,7 @@ a.section-self-link {
    how to disable the default left margin, and how to italicize the caption.
 */
 figure {
-    margin: auto
+    margin: initial
 }
 
 figcaption {
